--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,28 @@
 =============================================================
 Tag name: noresm2_5_alpha09
+Date: 13 Feb 2025
+One-line Summary: Update BLOM fixes, CAM fix for ERS tests 
+
+ccs_config		: https://github.com/NorESMhub/ccsm_config_noresm/ccs_config_noresm0.0.38
+cime			: https://github.com/NorESMhub/come/cime6.1.38_noresm_v0
+share			: https://github.com/NorESMhub/NorESM_share/share1.1.2_noresm_v0
+components/blom		: https://github.com/NorESMhub/BLOM/dev1.7.1
+components/cam		: https://github.com/NorESMhub/CAM/noresm2_5_018_cam6_4_041
+components/cdeps	: https://github.com/ESCOMP/CDEPS.git/cdeps1.0.51
+components/cice		: https://github.com/NorESMhub/NorESM_CICE/cesm_cice6_5_0_20240702_noresm_v1
+components/cism		: https://github.com/NorESMhub/CISM-wrapper/CISM_wrapper/cismwrap_2_2_002_noresm_v1
+components/clm		: https://github.com/ESCOMP/CDEPS.git/CLM/ctsm5.3.11-noresm_v2
+components/cmeps	: https://github.com/ESCOMP/CMEPS.git/cmeps1.0.20_noresm_v0
+components/mosart	: https://github.com/ESCOMP/CDEPS.git/MOSART/mosart1.1.02
+components/ww3		: https://github.com/NorESMhub/WW3_interface/ww3_interface_noresm0.0.15
+libraries/mct		: https://github.com/MCSclimate/MCT/MCT_2.11.0
+libraries/parallelio    : https://github.com/NCAR/ParallelIO/pio2_6_2
+
+
+
+
+=============================================================
+Tag name: noresm2_5_alpha09
 Date: 06 Feb 2025
 One-line Summary: Update BLOM to hybrid coords in compsets, update CTSM 
 
