--- a/ChangeLog
+++ b/ChangeLog
@@ -23,7 +23,7 @@ Answer Changes introduced with this tag when compared to noresm2_5_alpha09a
     YES
 
 Problems identified as part of testing:
-
+    All tests pass.
 
 
 =============================================================
