--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,49 @@
 ===============================================================
+Tag name: noresm3_0_alpha03
+Date: 19 Apr 2025
+One-line Summary: Bug fixes for FATES, CMEPS/CDEPS update
+
+Details:
+ - Fixed inconsistencies in Fates radiation to work properly with cam7
+ - Added two tests in aux_clm_noresm
+ - Reduced output for CLM-FATES
+ - Updated blom, reduced output, removed CGS units, adde CPPM advection
+ - CDEPS has DOCN%MULTILEV-CPLHIST and DLND%GCPL mods for forcing CISM
+ - CMEPS writes out yearly lnd2glc and ocn2glc coupler history files
+   for forcing CISM (default for compesets with both CLM and BLOM)
+
+List all component tags that were used to create cesm tag:
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.45
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM.git          : dev1.9.0.4
+ - cam        : NorESMhub/CAM.git           : noresm3_0_002_cam6_4_070
+ - cdeps      : NorESMhub/CDEPS.git         : cdeps1.0.70_noresm_v2
+ - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_006_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v4
+ - cmeps      : NorESMhub/CMEPS.git         : cmeps1.0.39_noresm_v1
+ - mosart     : ESCOMP/MOSART               : mosart1.1.08
+ - ww3        : NorESMhub/WW3_interface.git : ww3_interface_noresm0.0.17
+ - pycect     : NCAR/PyCECT.git             : 3.2.2
+
+Bugs fixed: Invalid values for NF2000 ERS tests with fates,
+            failures to run IxClm60Fatesx compsets with datm settings
+            that are consistent with cam7 radiation coupling
+
+Describe any changes made to scripts/build system: 
+
+Describe any substantial timing or memory changes: NA
+
+Code reviewed by:
+
+Summary of pre-tag testing: prealpha_noresm suite
+ - 
+
+Summarize any change to answers: NA
+
+===============================================================
 Tag name: noresm3_0_alpha02a
 Date: 19 Apr 2025
 One-line Summary: Add support and testing for two-degree test
