--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,48 @@
 ===============================================================
+Tag name: noresm3_0_alpha03a
+Date:
+One-line Summary:
+
+Details:
+ - New process configurations for 2 degree (pesize="X1") and
+   1 degree (pesize="M") coupled simulations.
+ - Update BLOM tag to dev1.9.0.5
+   + Remove support for CGS units
+   + Usermods for default and reduced (spinup) model output
+   + Add compatible piecewise parabolic method (CPPM)
+   + Bug fix for mod_inigeo
+
+List all component tags that were used to create noresm tag:
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.45
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : dev1.9.0.5
+ - cam        : NorESMhub/CAM               : noresm3_0_002_cam6_4_070
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v2
+ - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_006_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v3
+    - fates   : NorESMhub/fates             : sci.1.82.3_api.39.0.0_noresm_v2
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v1
+ - mosart     : ESCOMP/MOSART               : mosart1.1.08
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.17
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed: Fix in BLOM mod_inigeo, for bug that could trigger failure
+            during floating-point to integer conversion.
+
+Describe any changes made to scripts/build system:
+
+Describe any substantial timing or memory changes:
+
+Code reviewed by:
+
+Summary of pre-tag testing:
+
+Summarize any change to answers:
+
+===============================================================
 Tag name: noresm3_0_alpha03
 Date: 19 Apr 2025
 One-line Summary: Bug fixes for FATES, CMEPS/CDEPS update
