Update CDEPS for JRA repeat year forcing streams

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,10 @@ Details:
    + Usermods for default and reduced (spinup) model output
    + Add compatible piecewise parabolic method (CPPM)
    + Bug fix for mod_inigeo
+ - Update cdeps to cdeps1.0.70_noresm_v4
+   + Fix support for CESM defined JRA repeat year forcing streams
+   + Add support for new JRA-RYF6162 repeat year forcing stream
+
 
 List all component tags that were used to create noresm tag:
  - parallelio : NCAR/ParallelIO             : pio2_6_2
@@ -19,7 +23,7 @@ List all component tags that were used to create noresm tag:
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
  - blom       : NorESMhub/BLOM              : dev1.9.0.5
  - cam        : NorESMhub/CAM               : noresm3_0_002_cam6_4_070
- - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v2
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v4
  - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_006_noresm_v0
  - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v3
@@ -29,8 +33,10 @@ List all component tags that were used to create noresm tag:
  - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.17
  - pycect     : NCAR/PyCECT                 : 3.2.2
 
-Bugs fixed: Fix in BLOM mod_inigeo, for bug that could trigger failure
-            during floating-point to integer conversion.
+Bugs fixed:
+ - Fix in BLOM mod_inigeo, for bug that could trigger failure during
+   floating-point to integer conversion.
+ - Fix memory leak for stream_vectors
 
 Describe any changes made to scripts/build system:
 
