--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ One-line Summary:
 Details:
  - New process configurations for 2 degree (pesize="X1") and
    1 degree (pesize="M") coupled simulations.
+ - Reduced output usermod: cime_config/usermods_dirs/reduced_out_devsim
+   + tests for this usermod, NOTE this should be used only with FATES
  - Update BLOM tag to dev1.9.0.5
    + Remove support for CGS units
    + Usermods for default and reduced (spinup) model output
@@ -14,6 +16,9 @@ Details:
  - Update cdeps to cdeps1.0.70_noresm_v4
    + Fix support for CESM defined JRA repeat year forcing streams
    + Add support for new JRA-RYF6162 repeat year forcing stream
+ - Update CTSM tag to ctsm5.3.034_noresm_v5
+   + reduce output usermod for fates
+   + tests for reduced output usermod
 
 
 List all component tags that were used to create noresm tag:
@@ -26,7 +31,7 @@ List all component tags that were used to create noresm tag:
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v4
  - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_006_noresm_v0
- - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v3
+ - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v5
     - fates   : NorESMhub/fates             : sci.1.82.3_api.39.0.0_noresm_v2
  - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v1
  - mosart     : ESCOMP/MOSART               : mosart1.1.08
