--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,44 @@
 ===============================================================
+Tag name: noresm3_0_alpha04
+Date:
+One-line Summary:
+
+Details:
+ - Update BLOM tag to dev1.9.0.8
+   + Includ modified shortwave absorption module
+   + Bug fix for input file names
+
+List all component tags that were used to create noresm tag:
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.45
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : dev1.9.0.8
+ - cam        : NorESMhub/CAM               : noresm3_0_002_cam6_4_070
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v4
+ - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_006_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.034_noresm_v5
+    - fates   : NorESMhub/fates             : sci.1.82.3_api.39.0.0_noresm_v2
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v1
+ - mosart     : ESCOMP/MOSART               : mosart1.1.08
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.17
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+ - Support 512 character length input files for BLOM/iHAMOCC
+
+Describe any changes made to scripts/build system: NA
+
+Describe any substantial timing or memory changes: NA
+
+Code reviewed by:
+
+Summary of pre-tag testing:
+
+Summarize any change to answers:
+
+===============================================================
 Tag name: noresm3_0_alpha03a
 Date: 5 May 2025
 One-line Summary: Reduced output usermod, BLOM and CTSM updates
