--- a/ChangeLog
+++ b/ChangeLog
@@ -10,13 +10,14 @@ Details:
    Make datm set nextsw_cday with nextsw_cday_calc_cam7
    to give same value as cam7 does on stepn=1
  - Add ERI tests for fates_nocomp to avoid getting same problems again
+ - Update BLOM to dev1.9.0.13 to fix multi-driver runs.
 
 List all component tags that were used to create noresm tag:
  - parallelio : NCAR/ParallelIO             : pio2_6_2
  - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.45
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
- - blom       : NorESMhub/BLOM              : dev1.9.0.12
+ - blom       : NorESMhub/BLOM              : dev1.9.0.13
  - cam        : NorESMhub/CAM               : noresm3_0_002_cam6_4_070
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v5
  - cice6      : NorESMhub/NorESM_CICE       : cesm_cice6_5_0_20240702_noresm_v3
