--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,24 @@ Date:
 One-line Summary: Update CICE to noresm_cice6_6_0_20250522_v0
 
 Details:
- - Update CICE to noresm_cice6_6_0_20250522_v0:
+ - Update CICE6 to noresm_cice6_6_0_20250522_v0:
+ - Update BLOM to dev1.0.9.21:
+   - Add Gibbs SeaWater (GSW) Oceanographic Toolbox of TEOS-10 (external)
+   - Support for WOA18 in-situ temperature and practical salinity climatology
+   - Adapt reference potential densities to the evolving model state
+   - Support river2omip experiments
+   - Add option for GESAMP 2018 dust/iron deposition
+ - Update WW3_interface to ww3_interface_noresm0.0.18:
+   - Update WW3 to ww3_noresm0.0.16
+ - Update ccs_config to ccs_config_nore0.0.47:
+   - Add model grid alias ne30pg3_tn05
+   - Include ROF2OCN mapping files
+ - Update CMEPS to cmeps1.0.39_noresm_v3:
+   - fixes to get DLND%RCPL mode working with mosart
+   - various ocn and lnd component fixes
+ - Update CDEPS to cdeps1.0.70_noresm_v6:
+   - test for DLND%RCPL
+   - various ocn and lnd component fixes
 
 Component tags used in this tag:
 
