--- a/ChangeLog
+++ b/ChangeLog
@@ -54,9 +54,12 @@ Code reviewed by: Matvey Debolskiy, Mats Bentsen, Jens Debernard
 
 Summary of pre-tag testing:
   - prealpha_noresm, aux_blom_noresm
+    - Expected baseline diffs and nlcomp fails
+    - N1850 compset: Throughput changed by 1.27%:
+      baseline=1.579 sypd, tolerance=25%, current=1.559 sypd
 
 Summarize any change to answers:
-
+  - Any compset with active ocean and sea ice
 
 ==============================================================
 
