--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@ Details:
  - Update BLOM to tag v1.10.0
    - Update parameters for reference density and eddy diffusivity
  - Update CAM to tag noresm3_0_010_cam6_4_085
-   -
+   - Add option to use Shofer local or PUMAS global ice limiter
 
 Component tags used in this tag:
 
@@ -17,7 +17,7 @@ Component tags used in this tag:
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
  - blom       : NorESMhub/BLOM              : v1.10.0
- - cam        : NorESMhub/CAM               : noresm3_0_009_cam6_4_085
+ - cam        : NorESMhub/CAM               : noresm3_0_010_cam6_4_085
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v0
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
