Update ChangeLog file

--- a/ChangeLog
+++ b/ChangeLog
@@ -46,17 +46,35 @@ Bugs fixed:
    (NorESMhub/NORESM_CICE#18)
 
 Describe any changes made to scripts/build system:
-   Update git-fleximod to version v1.0.2 (Aug. 15, 2025) from
+ - Update git-fleximod to version v1.0.2 (Aug. 15, 2025) from
    version v0.9.2 (Sep. 18, 2024). Full changelog available via link:
    https://github.com/ESMCI/git-fleximod/compare/02e8599...5a406d3
 
-Describe any substantial timing or memory changes: NA
+Describe any substantial timing or memory changes:
+ - The increase in ocean vertical layers potentially increase 3D fields by 28.6%.
+   Cost of short OMIP-type test runs incerease by 23%-26%, whereas cost of fully
+   coupled test runs increase by 1%-2%, in terms of model throughput
+   (simulated_years/day).
 
 Code merged by: Tomas Torsvik
 
 Code reviewed by: Steve Goldhaber, Mats Bentsen, Jens Debernard
 
 Summary of pre-tag testing:
+ - prealpha_noresm : 1 expected FAIL
+     SMS_D_Ld1_P253.ne30pg3_tn05.N1850.betzy_intel.allactive-defaultio
+ - aux_blom_noresm : 5 expected FAIL
+     ERP_Ld3_P256.T62_tn14.NOINYOC.betzy_gnu
+     ERP_Ld3_P256.T62_tn14.NOINYOC.betzy_intel
+     ERS_Ld3.T62_tn14_wtn14nw.NOINY_WW3.betzy_gnu.blom-wavice
+     SMS_D_Ld1.T62_tn14_wtn14nw.NOINYOC_WW3.betzy_gnu.blom-wavice
+     SMS_D_Ld1.T62_tn14.NOIIAOC20TR.betzy_intel
+ - aux_cam_noresm : 1 expected FAIL
+     ERP_Ln9.ne16pg3_ne16pg3_mtn14.NF1850ghg_fates-nocomp.betzy_intel.cam-outfrq9s
+ - aux_clm_noresm : 1 expected fail
+     ERS.f09_f09_mtn14.I2000Clm60Bgc.betzy_intel.clm-lnd2rof_tracers
+ - aux_hamocc_noresm : 1 expected fail
+     SMS_D_Ld1.T62_tn14.NOINYOC.betzy_intel.blom-hamocc-hamocc6
 
 Summarize any change to answers:
 
