Fix tag in changelog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 ==============================================================
 
-Tag name: noresm3_0_beta02
+Tag name: noresm3_0_beta02a
 Date: 01-09-2025
 One-line Summary: Fixes for CISM%EVOLVE and new grids
 
