--- a/ChangeLog
+++ b/ChangeLog
@@ -40,7 +40,7 @@ Bugs fixed:
 
 Describe any changes made to scripts/build system: NA
 
-Describe any substantial timing or memory changes:
+Describe any substantial timing or memory changes: NA
 
 Code merged by: Tomas Torsvik
 
