Updates for noresm3_0_beta05

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,59 @@
 ==============================================================
 
+Tag name: noresm3_0_beta05
+Date: 07.11.2025
+One-line Summary: Updates to CAM and BLOM
+
+Details:
+ - Update BLOM to v1.12.13
+   - Bug fixes for diagnostics
+ - Update CAM to noresm3_0_019_cam6_4_121
+   - Update some forcing files for CMIP7
+   - Bug fixes for cloud chemistry
+   - Other minor bug fixes
+   - Remove UNICON
+   - Update RRTMGP
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.53
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.13
+ - cam        : NorESMhub/CAM               : noresm3_0_019_cam6_4_121
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.045_noresm_v14
+    - fates   : NorESMhub/fates             : sci.1.85.1_api.40.0.0_nor_sci1_api1
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v8
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v0
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+ - BLOM diagnostics
+
+Describe any changes made to scripts/build system: NA
+
+Describe any substantial timing or memory changes: NA
+
+Code merged by: Steve Goldhaber
+
+Code reviewed by: Tomas Torsvik, Mariana Vertenstein
+
+Summary of pre-tag testing:
+ - prealpha_noresm : ??
+   - DIFF compared with noresm3_0_beta04 for all NorESM compsets
+ - aux_blom_noresm : 
+ - aux_cam_noresm : Baseline and namelist changes for all tests
+ - aux_clm_noresm
+
+Summarize any change to answers:
+
+==============================================================
+
 Tag name: noresm3_0_beta04
 Date: 03.01.2025
 One-line Summary: Updates to CTSM and BLOM
